--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-animated-weather": "^4.0.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
